[package]
name = "moverex"
version = "0.1.0"
edition = "2021"
authors = ["davirain.yin@gmail.com"]
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
anyhow = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.25", features =["full"]}

aptos-api-types = { git = "https://github.com/aptos-labs/aptos-core", branch="mainnet" }
reqwest = "0.11.14"
serde = "1.0.152"
# aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }

[features]
aptos = []
